# digest

./: .gitignore  README.md  SKILL.md  pyproject.toml
src/digest/: __init__.py  __main__.py  api.py  cli.py
tests/: __init__.py  cli_test.py  conftest.py  extract_test.py  integration_test.py  list_test.py  mark_test.py
tests/__fixtures__/: empty_contents.jsonl  error_results.jsonl  malformed_lines.jsonl  mixed_content_types.jsonl  real_claude_format.jsonl  thinking_blocks.jsonl  unicode_content.jsonl
