[project]
name = "digest"
version = "0.1.0"
description = "Extract insights from Claude Code transcripts into artifact files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-describe>=2.2",
]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
digest = "digest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digest"]
